assgn-3/part-2/ra.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: Input $end

    1 Input: %empty
    2      | Input Line

    3 Line: Select NEWLINE
    4     | Project NEWLINE
    5     | Product NEWLINE
    6     | Join NEWLINE
    7     | error NEWLINE
    8     | Select END
    9     | Project END
   10     | Product END
   11     | Join END
   12     | END

   13 Select: SELECT LT Condition GT OPEN_PAR ID CLOSE_PAR

   14 Project: PROJECT LT Attributes GT OPEN_PAR ID CLOSE_PAR

   15 Product: OPEN_PAR ID CLOSE_PAR PRODUCT OPEN_PAR ID CLOSE_PAR

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN LT Condition GT OPEN_PAR ID CLOSE_PAR

   17 Attributes: Attributes COMMA Column_Name
   18           | Column_Name

   19 Column_Name: ID
   20            | ID DOT ID

   21 Condition: OPEN_PAR Condition CLOSE_PAR
   22          | Condition OR Condition
   23          | Condition AND Condition
   24          | Expression LT Expression
   25          | Expression GT Expression
   26          | Expression LTE Expression
   27          | Expression GTE Expression
   28          | Expression EQ Expression
   29          | Expression NEQ Expression

   30 Expression: NUMBER
   31           | Column_Name
   32           | STRING
   33           | OPEN_PAR Expression CLOSE_PAR
   34           | Expression PLUS Expression
   35           | Expression MINUS Expression
   36           | Expression TIMES Expression
   37           | Expression DIVIDE Expression
   38           | MINUS Expression


Terminals, with rules where they appear

$end (0) 0
error (256) 7
SELECT (258) 13
PROJECT (259) 14
PRODUCT (260) 15
JOIN (261) 16
OPEN_PAR (262) 13 14 15 16 21 33
CLOSE_PAR (263) 13 14 15 16 21 33
GT (264) 13 14 16 25
LT (265) 13 14 16 24
GTE (266) 27
LTE (267) 26
EQ (268) 28
NEQ (269) 29
AND (270) 23
OR (271) 22
PLUS (272) 34
MINUS (273) 35 38
TIMES (274) 36
DIVIDE (275) 37
COMMA (276) 17
DOT (277) 20
STRING (278) 32
NUMBER (279) 30
ID (280) 13 14 15 16 19 20
NEWLINE (281) 3 4 5 6 7
ERROR (282)
END (283) 8 9 10 11 12
NEG (284)


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
Input (31)
    on left: 1 2, on right: 0 2
Line (32)
    on left: 3 4 5 6 7 8 9 10 11 12, on right: 2
Select (33)
    on left: 13, on right: 3 8
Project (34)
    on left: 14, on right: 4 9
Product (35)
    on left: 15, on right: 5 10
Join (36)
    on left: 16, on right: 6 11
Attributes (37)
    on left: 17 18, on right: 14 17
Column_Name (38)
    on left: 19 20, on right: 17 18 31
Condition (39)
    on left: 21 22 23 24 25 26 27 28 29, on right: 13 16 21 22 23
Expression (40)
    on left: 30 31 32 33 34 35 36 37 38, on right: 24 25 26 27 28 29
    33 34 35 36 37 38


State 0

    0 $accept: . Input $end

    $default  reduce using rule 1 (Input)

    Input  go to state 1


State 1

    0 $accept: Input . $end
    2 Input: Input . Line

    $end      shift, and go to state 2
    error     shift, and go to state 3
    SELECT    shift, and go to state 4
    PROJECT   shift, and go to state 5
    OPEN_PAR  shift, and go to state 6
    END       shift, and go to state 7

    Line     go to state 8
    Select   go to state 9
    Project  go to state 10
    Product  go to state 11
    Join     go to state 12


State 2

    0 $accept: Input $end .

    $default  accept


State 3

    7 Line: error . NEWLINE

    NEWLINE  shift, and go to state 13


State 4

   13 Select: SELECT . LT Condition GT OPEN_PAR ID CLOSE_PAR

    LT  shift, and go to state 14


State 5

   14 Project: PROJECT . LT Attributes GT OPEN_PAR ID CLOSE_PAR

    LT  shift, and go to state 15


State 6

   15 Product: OPEN_PAR . ID CLOSE_PAR PRODUCT OPEN_PAR ID CLOSE_PAR
   16 Join: OPEN_PAR . ID CLOSE_PAR JOIN LT Condition GT OPEN_PAR ID CLOSE_PAR

    ID  shift, and go to state 16


State 7

   12 Line: END .

    $default  reduce using rule 12 (Line)


State 8

    2 Input: Input Line .

    $default  reduce using rule 2 (Input)


State 9

    3 Line: Select . NEWLINE
    8     | Select . END

    NEWLINE  shift, and go to state 17
    END      shift, and go to state 18


State 10

    4 Line: Project . NEWLINE
    9     | Project . END

    NEWLINE  shift, and go to state 19
    END      shift, and go to state 20


State 11

    5 Line: Product . NEWLINE
   10     | Product . END

    NEWLINE  shift, and go to state 21
    END      shift, and go to state 22


State 12

    6 Line: Join . NEWLINE
   11     | Join . END

    NEWLINE  shift, and go to state 23
    END      shift, and go to state 24


State 13

    7 Line: error NEWLINE .

    $default  reduce using rule 7 (Line)


State 14

   13 Select: SELECT LT . Condition GT OPEN_PAR ID CLOSE_PAR

    OPEN_PAR  shift, and go to state 25
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Condition    go to state 31
    Expression   go to state 32


State 15

   14 Project: PROJECT LT . Attributes GT OPEN_PAR ID CLOSE_PAR

    ID  shift, and go to state 29

    Attributes   go to state 33
    Column_Name  go to state 34


State 16

   15 Product: OPEN_PAR ID . CLOSE_PAR PRODUCT OPEN_PAR ID CLOSE_PAR
   16 Join: OPEN_PAR ID . CLOSE_PAR JOIN LT Condition GT OPEN_PAR ID CLOSE_PAR

    CLOSE_PAR  shift, and go to state 35


State 17

    3 Line: Select NEWLINE .

    $default  reduce using rule 3 (Line)


State 18

    8 Line: Select END .

    $default  reduce using rule 8 (Line)


State 19

    4 Line: Project NEWLINE .

    $default  reduce using rule 4 (Line)


State 20

    9 Line: Project END .

    $default  reduce using rule 9 (Line)


State 21

    5 Line: Product NEWLINE .

    $default  reduce using rule 5 (Line)


State 22

   10 Line: Product END .

    $default  reduce using rule 10 (Line)


State 23

    6 Line: Join NEWLINE .

    $default  reduce using rule 6 (Line)


State 24

   11 Line: Join END .

    $default  reduce using rule 11 (Line)


State 25

   21 Condition: OPEN_PAR . Condition CLOSE_PAR
   33 Expression: OPEN_PAR . Expression CLOSE_PAR

    OPEN_PAR  shift, and go to state 25
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Condition    go to state 36
    Expression   go to state 37


State 26

   38 Expression: MINUS . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 39


State 27

   32 Expression: STRING .

    $default  reduce using rule 32 (Expression)


State 28

   30 Expression: NUMBER .

    $default  reduce using rule 30 (Expression)


State 29

   19 Column_Name: ID .
   20            | ID . DOT ID

    DOT  shift, and go to state 40

    $default  reduce using rule 19 (Column_Name)


State 30

   31 Expression: Column_Name .

    $default  reduce using rule 31 (Expression)


State 31

   13 Select: SELECT LT Condition . GT OPEN_PAR ID CLOSE_PAR
   22 Condition: Condition . OR Condition
   23          | Condition . AND Condition

    GT   shift, and go to state 41
    AND  shift, and go to state 42
    OR   shift, and go to state 43


State 32

   24 Condition: Expression . LT Expression
   25          | Expression . GT Expression
   26          | Expression . LTE Expression
   27          | Expression . GTE Expression
   28          | Expression . EQ Expression
   29          | Expression . NEQ Expression
   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    GT      shift, and go to state 44
    LT      shift, and go to state 45
    GTE     shift, and go to state 46
    LTE     shift, and go to state 47
    EQ      shift, and go to state 48
    NEQ     shift, and go to state 49
    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53


State 33

   14 Project: PROJECT LT Attributes . GT OPEN_PAR ID CLOSE_PAR
   17 Attributes: Attributes . COMMA Column_Name

    GT     shift, and go to state 54
    COMMA  shift, and go to state 55


State 34

   18 Attributes: Column_Name .

    $default  reduce using rule 18 (Attributes)


State 35

   15 Product: OPEN_PAR ID CLOSE_PAR . PRODUCT OPEN_PAR ID CLOSE_PAR
   16 Join: OPEN_PAR ID CLOSE_PAR . JOIN LT Condition GT OPEN_PAR ID CLOSE_PAR

    PRODUCT  shift, and go to state 56
    JOIN     shift, and go to state 57


State 36

   21 Condition: OPEN_PAR Condition . CLOSE_PAR
   22          | Condition . OR Condition
   23          | Condition . AND Condition

    CLOSE_PAR  shift, and go to state 58
    AND        shift, and go to state 42
    OR         shift, and go to state 43


State 37

   24 Condition: Expression . LT Expression
   25          | Expression . GT Expression
   26          | Expression . LTE Expression
   27          | Expression . GTE Expression
   28          | Expression . EQ Expression
   29          | Expression . NEQ Expression
   33 Expression: OPEN_PAR Expression . CLOSE_PAR
   34           | Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    CLOSE_PAR  shift, and go to state 59
    GT         shift, and go to state 44
    LT         shift, and go to state 45
    GTE        shift, and go to state 46
    LTE        shift, and go to state 47
    EQ         shift, and go to state 48
    NEQ        shift, and go to state 49
    PLUS       shift, and go to state 50
    MINUS      shift, and go to state 51
    TIMES      shift, and go to state 52
    DIVIDE     shift, and go to state 53


State 38

   33 Expression: OPEN_PAR . Expression CLOSE_PAR

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 60


State 39

   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression
   38           | MINUS Expression .

    $default  reduce using rule 38 (Expression)


State 40

   20 Column_Name: ID DOT . ID

    ID  shift, and go to state 61


State 41

   13 Select: SELECT LT Condition GT . OPEN_PAR ID CLOSE_PAR

    OPEN_PAR  shift, and go to state 62


State 42

   23 Condition: Condition AND . Condition

    OPEN_PAR  shift, and go to state 25
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Condition    go to state 63
    Expression   go to state 32


State 43

   22 Condition: Condition OR . Condition

    OPEN_PAR  shift, and go to state 25
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Condition    go to state 64
    Expression   go to state 32


State 44

   25 Condition: Expression GT . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 65


State 45

   24 Condition: Expression LT . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 66


State 46

   27 Condition: Expression GTE . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 67


State 47

   26 Condition: Expression LTE . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 68


State 48

   28 Condition: Expression EQ . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 69


State 49

   29 Condition: Expression NEQ . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 70


State 50

   34 Expression: Expression PLUS . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 71


State 51

   35 Expression: Expression MINUS . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 72


State 52

   36 Expression: Expression TIMES . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 73


State 53

   37 Expression: Expression DIVIDE . Expression

    OPEN_PAR  shift, and go to state 38
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Expression   go to state 74


State 54

   14 Project: PROJECT LT Attributes GT . OPEN_PAR ID CLOSE_PAR

    OPEN_PAR  shift, and go to state 75


State 55

   17 Attributes: Attributes COMMA . Column_Name

    ID  shift, and go to state 29

    Column_Name  go to state 76


State 56

   15 Product: OPEN_PAR ID CLOSE_PAR PRODUCT . OPEN_PAR ID CLOSE_PAR

    OPEN_PAR  shift, and go to state 77


State 57

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN . LT Condition GT OPEN_PAR ID CLOSE_PAR

    LT  shift, and go to state 78


State 58

   21 Condition: OPEN_PAR Condition CLOSE_PAR .

    $default  reduce using rule 21 (Condition)


State 59

   33 Expression: OPEN_PAR Expression CLOSE_PAR .

    $default  reduce using rule 33 (Expression)


State 60

   33 Expression: OPEN_PAR Expression . CLOSE_PAR
   34           | Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    CLOSE_PAR  shift, and go to state 59
    PLUS       shift, and go to state 50
    MINUS      shift, and go to state 51
    TIMES      shift, and go to state 52
    DIVIDE     shift, and go to state 53


State 61

   20 Column_Name: ID DOT ID .

    $default  reduce using rule 20 (Column_Name)


State 62

   13 Select: SELECT LT Condition GT OPEN_PAR . ID CLOSE_PAR

    ID  shift, and go to state 79


State 63

   22 Condition: Condition . OR Condition
   23          | Condition . AND Condition
   23          | Condition AND Condition .

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 23 (Condition)


State 64

   22 Condition: Condition . OR Condition
   22          | Condition OR Condition .
   23          | Condition . AND Condition

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    $default  reduce using rule 22 (Condition)


State 65

   25 Condition: Expression GT Expression .
   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 25 (Condition)


State 66

   24 Condition: Expression LT Expression .
   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 24 (Condition)


State 67

   27 Condition: Expression GTE Expression .
   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 27 (Condition)


State 68

   26 Condition: Expression LTE Expression .
   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 26 (Condition)


State 69

   28 Condition: Expression EQ Expression .
   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 28 (Condition)


State 70

   29 Condition: Expression NEQ Expression .
   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 29 (Condition)


State 71

   34 Expression: Expression . PLUS Expression
   34           | Expression PLUS Expression .
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 34 (Expression)


State 72

   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   35           | Expression MINUS Expression .
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression

    TIMES   shift, and go to state 52
    DIVIDE  shift, and go to state 53

    $default  reduce using rule 35 (Expression)


State 73

   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   36           | Expression TIMES Expression .
   37           | Expression . DIVIDE Expression

    $default  reduce using rule 36 (Expression)


State 74

   34 Expression: Expression . PLUS Expression
   35           | Expression . MINUS Expression
   36           | Expression . TIMES Expression
   37           | Expression . DIVIDE Expression
   37           | Expression DIVIDE Expression .

    $default  reduce using rule 37 (Expression)


State 75

   14 Project: PROJECT LT Attributes GT OPEN_PAR . ID CLOSE_PAR

    ID  shift, and go to state 80


State 76

   17 Attributes: Attributes COMMA Column_Name .

    $default  reduce using rule 17 (Attributes)


State 77

   15 Product: OPEN_PAR ID CLOSE_PAR PRODUCT OPEN_PAR . ID CLOSE_PAR

    ID  shift, and go to state 81


State 78

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN LT . Condition GT OPEN_PAR ID CLOSE_PAR

    OPEN_PAR  shift, and go to state 25
    MINUS     shift, and go to state 26
    STRING    shift, and go to state 27
    NUMBER    shift, and go to state 28
    ID        shift, and go to state 29

    Column_Name  go to state 30
    Condition    go to state 82
    Expression   go to state 32


State 79

   13 Select: SELECT LT Condition GT OPEN_PAR ID . CLOSE_PAR

    CLOSE_PAR  shift, and go to state 83


State 80

   14 Project: PROJECT LT Attributes GT OPEN_PAR ID . CLOSE_PAR

    CLOSE_PAR  shift, and go to state 84


State 81

   15 Product: OPEN_PAR ID CLOSE_PAR PRODUCT OPEN_PAR ID . CLOSE_PAR

    CLOSE_PAR  shift, and go to state 85


State 82

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN LT Condition . GT OPEN_PAR ID CLOSE_PAR
   22 Condition: Condition . OR Condition
   23          | Condition . AND Condition

    GT   shift, and go to state 86
    AND  shift, and go to state 42
    OR   shift, and go to state 43


State 83

   13 Select: SELECT LT Condition GT OPEN_PAR ID CLOSE_PAR .

    $default  reduce using rule 13 (Select)


State 84

   14 Project: PROJECT LT Attributes GT OPEN_PAR ID CLOSE_PAR .

    $default  reduce using rule 14 (Project)


State 85

   15 Product: OPEN_PAR ID CLOSE_PAR PRODUCT OPEN_PAR ID CLOSE_PAR .

    $default  reduce using rule 15 (Product)


State 86

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN LT Condition GT . OPEN_PAR ID CLOSE_PAR

    OPEN_PAR  shift, and go to state 87


State 87

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN LT Condition GT OPEN_PAR . ID CLOSE_PAR

    ID  shift, and go to state 88


State 88

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN LT Condition GT OPEN_PAR ID . CLOSE_PAR

    CLOSE_PAR  shift, and go to state 89


State 89

   16 Join: OPEN_PAR ID CLOSE_PAR JOIN LT Condition GT OPEN_PAR ID CLOSE_PAR .

    $default  reduce using rule 16 (Join)
